--- a/Ruby/Sinarps/Gemfile
+++ b/Ruby/Sinarps/Gemfile
@@ -3,3 +3,5 @@ source 'https://rubygems.org'
 gem 'sinatra'
 gem 'sinatra-reloader'
 gem 'rps_test'
+gem "rack-test", require: "rack/test"
+gem 'pry'
