--- a/Ruby/Sinarps/Gemfile
+++ b/Ruby/Sinarps/Gemfile
@@ -3,5 +3,6 @@ source 'https://rubygems.org'
 gem 'sinatra'
 gem 'sinatra-reloader'
 gem 'rps_test'
+gem 'minitest'
 gem "rack-test", require: "rack/test"
 gem 'pry'
