--- a/Ruby/Sinarps/Gemfile
+++ b/Ruby/Sinarps/Gemfile
@@ -3,6 +3,7 @@ source 'https://rubygems.org'
 gem 'sinatra'
 gem 'sinatra-reloader'
 gem 'rps_test'
-gem 'minitest'
+gem 'minitest', "4.7.5"
+gem 'test-unit'
 gem "rack-test", require: "rack/test"
 gem 'pry'
